--- a/thesis.tex
+++ b/thesis.tex
@@ -6,7 +6,7 @@
 \SgSetAuthorDegrees{List your previous degrees here}
 \SgSetYear{2024}
 \SgSetDegree{Doctor of Philosophy}
-\SgSetDepartment{Department}
+\SgSetDepartment{Centre for Quantum Technologies}
 \SgSetUniversity{National University of Singapore}
 \SgSetDeclarationDate{March 2024}
 \SgSetAdvisor{Advisor's Name}
