--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-CQT_PhD_Thesis_Template: A Latex template for writing CQT Phd Thesis
+CQT_PhD_Thesis_Template: A Latex template for writing CQT PhD Thesis
 ===================================================
 
 Under completion.
